--- a/R Scatterplot.ipynb
+++ b/R Scatterplot.ipynb
@@ -1,9 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "friendly-lloyd",
+   "metadata": {},
+   "source": [
+    "# initialize data from csv file"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "according-queue",
+   "id": "intelligent-thing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,9 +23,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "appropriate-construction",
+   "metadata": {},
+   "source": [
+    "# use built-in plot function to draw points and regression line afterwards"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "quantitative-share",
+   "id": "secure-chuck",
    "metadata": {},
    "outputs": [
     {
